--- a/CSS/styles_none.css
+++ b/CSS/styles_none.css
@@ -234,10 +234,6 @@ table th {
 }
 
 .board-table .th-date {
-  width: 150px;
-}
-
-.board-table .th-date_instructor {
   width: 130px;
 }
 
@@ -4301,102 +4297,6 @@ textarea.form-control-lg {
   border-top-right-radius: 0;
 }
 
-.nav {
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-}
-
-.nav-link {
-  display: block;
-  padding: 0.5rem 1rem;
-  color: #f4623a;
-  text-decoration: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
-}
-@media (prefers-reduced-motion: reduce) {
-  .nav-link {
-    transition: none;
-  }
-}
-.nav-link:hover, .nav-link:focus {
-  color: #c34e2e;
-}
-.nav-link.disabled {
-  color: #6c757d;
-  pointer-events: none;
-  cursor: default;
-}
-
-.nav-tabs {
-  border-bottom: 1px solid #dee2e6;
-}
-.nav-tabs .nav-link {
-  margin-bottom: -1px;
-  background: none;
-  border: 1px solid transparent;
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
-}
-.nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
-  border-color: #e9ecef #e9ecef #dee2e6;
-  isolation: isolate;
-}
-.nav-tabs .nav-link.disabled {
-  color: #6c757d;
-  background-color: transparent;
-  border-color: transparent;
-}
-.nav-tabs .nav-link.active,
-.nav-tabs .nav-item.show .nav-link {
-  color: #495057;
-  background-color: #fff;
-  border-color: #dee2e6 #dee2e6 #fff;
-}
-.nav-tabs .dropdown-menu {
-  margin-top: -1px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.nav-pills .nav-link {
-  background: none;
-  border: 0;
-  border-radius: 0.25rem;
-}
-.nav-pills .nav-link.active,
-.nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #f4623a;
-}
-
-.nav-fill > .nav-link,
-.nav-fill .nav-item {
-  flex: 1 1 auto;
-  text-align: center;
-}
-
-.nav-justified > .nav-link,
-.nav-justified .nav-item {
-  flex-basis: 0;
-  flex-grow: 1;
-  text-align: center;
-}
-
-.nav-fill .nav-item .nav-link,
-.nav-justified .nav-item .nav-link {
-  width: 100%;
-}
-
-.tab-content > .tab-pane {
-  display: none;
-}
-.tab-content > .active {
-  display: block;
-}
-
 .navbar {
   position: relative;
   display: flex;
@@ -4429,15 +4329,29 @@ textarea.form-control-lg {
 .navbar-nav {
   display: flex;
   flex-direction: column;
-  width:800px;
-  height: 10px;
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
 }
+.navbar-nav .nav-item:nth-child(1){
+  padding-top: 12px;
+}
+.navbar-nav .nav-item:nth-child(2){
+  padding-top: 12px;
+}
+.navbar-nav .nav-item:nth-child(3){
+  padding-top: 12px;
+}
+.navbar-nav .nav-item:nth-child(4){
+  padding-top: 12px;
+}
+.navbar-nav .nav-item:nth-child(5){
+  padding-top: 12px;
+}
 .navbar-nav .nav-link {
   padding-right: 0;
   padding-left: 0;
+  text-decoration: none;
 }
 .navbar-nav .dropdown-menu {
   position: static;
@@ -4878,7 +4792,6 @@ textarea.form-control-lg {
 .navbar-dark .navbar-text a:focus {
   color: #fff;
 }
-
 .card {
   position: relative;
   display: flex;
@@ -12014,3 +11927,4 @@ header.masthead_enroll h1, header.masthead_enroll .h1 {
   flex-direction: row;
   margin-left: 150px;
 }
+
