--- a/views/auth/auth_find_password.ejs
+++ b/views/auth/auth_find_password.ejs
@@ -108,7 +108,7 @@
     <!-- Contact-->
     <section class="page-section" id="contact">
       <div class="container px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="row gx-4 gx-lg-5 justify-content-center" style="margin-top: 100px">
           <div class="col-lg-8 col-xl-6 text-center">
             <h2 class="mt-0">비밀번호 찾기</h2>
             <hr class="divider" />
@@ -117,7 +117,7 @@
             </p>
           </div>
         </div>
-        <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center mb-5" style="margin-top: 10px">
           <div class="col-lg-6">
             <form id="contactForm" action="/auth/find_pw_process" method="post">
               <!-- Name input-->
