--- a/views/enroll_page_before_search.ejs
+++ b/views/enroll_page_before_search.ejs
@@ -40,7 +40,7 @@
       src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"
     ></script>
   </head>
-  <body>
+   <body>
     <div class="loader-wrapper">
       <span class="loader"><span class="loader-inner"></span></span>
     </div>
@@ -173,6 +173,10 @@
             <input type="checkbox" name="Course_type" id="Python" value="2" />
             <span class="control__content"> Python </span>
           </label>
+          <label class="control" for="Python_hard">
+            <input type="checkbox" name="Course_type" id="Python_hard" value="8" />
+            <span class="control__content"> Python 심화 </span>
+          </label>
           <label class="control" for="Minecraft Programming">
             <input
               type="checkbox"
@@ -202,6 +206,15 @@
           <label class="control" for="Make_Web">
             <input type="checkbox" name="Course_type" id="Make_Web" value="7" />
             <span class="control__content"> 웹 페이지 만들기 </span>
+          </label>
+          <br>
+          <label class="control" for="COS">
+            <input type="checkbox" name="Course_type" id="COS" value="9" />
+            <span class="control__content"> COS 자격증 </span>
+          </label>
+          <label class="control" for="COS pro">
+            <input type="checkbox" name="Course_type" id="COS pro" value="10" />
+            <span class="control__content"> COS Pro 자격증 </span>
           </label>
         </fieldset>
         <fieldset>
@@ -283,46 +296,102 @@
           </label>
         </fieldset>
         <br />
-        <input
-          type="submit"
-          class="btn btn-dark"
-          style="margin-bottom: 30px; width: 5%"
-          value="🔍   검색"
-        />
+        <button class="btn btn-dark" style="margin-bottom : 30px;">
+          <i class="bi bi-search"></i>
+        </button>
       </form>
     </div>
-    <!-- Footer-->
-    <footer class="bg-light py-5">
-      <div class="container px-4 px-lg-5">
-        <div class="small text-center text-muted">
-          <a href="/policy/private">개인정보처리방침</a> |
-          <a href="/policy/tos">이용약관</a>
-        </div>
-      </div>
-      <div class="container px-4 px-lg-5">
-        <div class="small text-center text-muted">
-          코딩나라 | 대표자: 장영재, 박민수 | 사업자번호: 148-14-01860 사업자
-          정보 확인
-        </div>
-      </div>
-      <div class="container px-4 px-lg-5">
-        <div class="small text-center text-muted">
-          주소: 서울특별시 서대문구 북가좌동
-        </div>
-      </div>
-      <br />
-      <div class="container px-4 px-lg-5">
-        <div class="small text-center text-muted">
-          Copyright &copy;코딩나라(Coding-nara)
+    <!— Footer—>
+    <footer class="bg-light py-2">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-md">
+            <div
+              style="
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+              "
+            >
+              <img
+                src="../image/all_logo.png"
+                width="200"
+                height="200"
+                style="text-align: center"
+              />
+              <div class="row-md-6">
+                <div class="small text-muted">
+                  Copyright &copy;코딩나라(Coding-nara)
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6" style="margin-top: 20px">
+            <div
+              style="
+                display: flex;
+                justify-content: center;
+                margin-bottom: 15px;
+              "
+            >
+              <a
+                id="insta-btn"
+                href="https://www.instagram.com/coding_nara/saved/"
+                target="”_blank”"
+                style="margin-right: 10px"
+              >
+                <img
+                  src="../image/insta_logo.png"
+                  width="30px"
+                  height="30px"
+                  alt="인스타 버튼"
+                />
+              </a>
+              <a
+                id="kakao-login-btn"
+                href="http://pf.kakao.com/_xfyhFxj"
+                target="”_blank”"
+              >
+                <img
+                  src="../image/kakaologin.png"
+                  width="30"
+                  height="30"
+                  alt="카카오 버튼"
+                />
+              </a>
+            </div>
+            <div class="container px-4 px-lg-5" style="height: 35px" a>
+              <div class="small text-center text-muted">
+                <a href="/policy/private">개인정보처리방침</a> |
+                <a href="/policy/tos">이용약관</a>
+              </div>
+            </div>
+            <div class="container px-4 px-lg-5" style="margin-bottom: 10px">
+              <div
+                class="small text-left text-muted"
+                style="text-align: center"
+              >
+                <p>
+                  대표자: 장영재, 박민수<br />
+                  사업자번호: 148-14-01860<br />
+                  이메일: admin@coding-nara.com<br />
+                  주소: 서울특별시 서대문구 거북골로 18길 16<br />
+                  통신판매업 신고번호 : 2023-서울서대문-0418
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
-    <!-- Bootstrap core JS-->
+    <!— Bootstrap core JS—>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- SimpleLightbox plugin JS-->
+    <!— SimpleLightbox plugin JS—>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
-    <!-- Core theme JS-->
+    <!— Core theme JS—>
     <script src="../js/scripts.js"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
   </body>
 </html>
+
