--- a/views/review_page_root.ejs
+++ b/views/review_page_root.ejs
@@ -3,203 +3,198 @@
   <head>
     <title>수강 후기 <%=Title%></title>
     <meta charset="utf-8" />
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Bootstrap Icons-->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
-    <!-- Google fonts-->
-    <link
-      href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <!-- SimpleLightbox plugin CSS-->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css"
-      rel="stylesheet"
-    />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../CSS/styles.css" rel="stylesheet" />
-    <script
-      type="text/javascript"
-      src="https://code.jquery.com/jquery-1.12.4.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"
-    ></script>
-    <script type="text/javascript" src="../js/review.js"></script>
-  </head>
-  <body>
-    <div class="loader-wrapper">
-      <span class="loader"><span class="loader-inner"></span></span>
-    </div>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <!-- Bootstrap Icons-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+  <!-- Google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
+    rel="stylesheet" type="text/css" />
+  <!-- SimpleLightbox plugin CSS-->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+  <!-- Core theme CSS (includes Bootstrap)-->
+  <link href="../CSS/styles.css" rel="stylesheet" />
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+  <script type="text/javascript" src="../js/review.js"></script>
+  <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
+</head>
+<body>
+  <div class="loader-wrapper">
+    <span class="loader"><span class="loader-inner"></span></span>
+  </div>
 
-    <script>
-      $(window).on("load", function () {
-        $(".loader-wrapper").fadeOut(1000);
-      });
-    </script>
-    <!-- Navigation-->
-    <nav
-      class="navbar navbar-expand-lg navbar-light fixed-top py-3"
-      id="mainNav"
-    >
-      <div class="container px-4 px-lg-5">
-        <a
-          class="navbar-brand"
-          href="#page-top"
-          style="display: flex; flex-direction: row"
-        >
-          <img
-            src="../image/logo_mini.png"
-            width="30px"
-            height="30px"
-            style="margin-right: 7px"
-          />Coding-nara
-        </a>
-        <button
-          class="navbar-toggler navbar-toggler-right"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ms-auto my-2 my-lg-0">
-            <li class="nav-item"><a class="nav-link" href="/">소개</a></li>
-            <li class="nav-item">
-              <a class="nav-link" href="/curriculum">커리큘럼</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/enroll/sub">수강신청</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/review">강좌후기</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/ask">고객센터</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/login"><%-authCheck %></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- Masthead-->
-    <header class="masthead_review">
-      <div class="container px-4 px-lg-5 h-100">
-        <div
-          class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center"
-        >
-          <div
-            class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center"
-          >
-            <div class="col-lg-8 align-self-end">
-              <h1 class="text-white font-weight-bold">강좌후기</h1>
-              <hr class="divider" />
-            </div>
-            <div class="col-lg-8 align-self-baseline">
-              <p class="text-white-75 mb-5">
-                우리 아이에 적합한 교육 서비스를 경험해보세요
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-8 align-self-baseline">
-            <p class="text-white-75 mb-5">
-              우리 아이에 적합한 교육 서비스를 경험해보세요
-            </p>
-            <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
-          </div>
-        </div>
-      </div>
-    </header>
-    <br />
-    <section class="notice">
-      <div class="page-title">
-        <div class="container">
-          <h3></h3>
-        </div>
-      </div>
-      <!-- board list area -->
-      <div id="board-list">
-        <div class="container">
-          <table class="board-table">
-            <thead>
-              <tr>
-                <th scope="col" class="th-num">번호</th>
-                <th scope="col" class="th-num">강좌명</th>
-                <th scope="col" class="th-title">제목</th>
-                <th scope="col" class="th-date">등록일</th>
-                <th scope="col" class="th-date">글쓴이</th>
-                <th scope="col" class="th-date">공감</th>
-              </tr>
-            </thead>
-            <tbody id="information">
-              <%-List %>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </section>
-    <br />
-    <div style="display: flex; justify-content: center">
-      <nav aria-label="Page navigation example">
-        <ul class="pagination">
-          <div id="page_list" style="display: flex"><%-Page_List%></div>
+  <script>
+    $(window).on("load", function () {
+      $(".loader-wrapper").fadeOut(1000);
+    });
+  </script>
+  <!-- Navigation-->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+    <div class="container px-4 px-lg-5">
+      <a class="navbar-brand" href="#page-top" style="display: flex; flex-direction: row">
+        <img src="../image/logo_mini.png" width="30px" height="30px" style="margin-right: 7px" />Coding-nara
+      </a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ms-auto my-2 my-lg-0">
+          <li class="nav-item"><a class="nav-link" href="/">소개</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="/curriculum">커리큘럼</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/enroll/sub">수강신청</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/review">강좌후기</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/ask">고객센터</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">
+              <%-authCheck %>
+            </a>
+          </li>
         </ul>
-      </nav>
-    </div>
-    <br />
-  </body>
-  <!-- Footer-->
-  <footer class="bg-light py-5">
-    <div class="container px-4 px-lg-5">
-      <div class="small text-center text-muted">
-        <a href="/policy/private">개인정보처리방침</a> |
-        <a href="/policy/tos">이용약관</a>
       </div>
     </div>
-    <div class="container px-4 px-lg-5">
-      <div class="small text-center text-muted">
-        코딩나라 | 대표자: 장영재, 박민수 | 사업자번호: 148-14-01860 사업자 정보
-        확인
+  </nav>
+  <!-- Masthead-->
+  <header class="masthead_enroll">
+    <div class="container px-4 px-lg-5 h-100">
+      <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
+        <div class="col-lg-8 align-self-end">
+          <h1 class="text-white font-weight-bold">수강신청</h1>
+          <hr class="divider" />
+        </div>
+        <div class="col-lg-8 align-self-baseline">
+          <p class="text-white-75 mb-5">
+            스케줄에 맞춰서 원하는 시간에 수업을 들을 수 있습니다.
+          </p>
+        </div>
       </div>
     </div>
-    <div class="container px-4 px-lg-5">
-      <div class="small text-center text-muted">
-        주소: 서울특별시 서대문구 북가좌동
+  </header>
+
+
+  <!--Review-->
+  <div class="testimonial-heading">
+    <span>Comments</span>
+    <h4>강좌 후기</h4>
+  </div>
+  <!--testimonials-box-container------>
+  <div class="testimonial-box-container row">
+    <%-List %>
+  </div>
+  <br />
+  
+  </section>
+  </br>
+  <div style="display: flex; justify-content: center">
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <div id="page_list" style="display: flex">
+          <%-Page_List%>
+        </div>
+      </ul>
+    </nav>
+  </div>
+
+  </br>
+</body>
+<!-- Footer-->
+<footer class="bg-light py-2">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-md">
+            <div
+              style="
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+              "
+            >
+              <img
+                src="../image/all_logo.png"
+                width="200"
+                height="200"
+                style="text-align: center"
+              />
+              <div class="row-md-6">
+                <div class="small text-muted">
+                  Copyright &copy;코딩나라(Coding-nara)
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6" style="margin-top: 20px">
+            <div
+              style="
+                display: flex;
+                justify-content: center;
+                margin-bottom: 15px;
+              "
+            >
+              <a
+                id="insta-btn"
+                href="https://www.instagram.com/coding_nara/saved/"
+                target="”_blank”"
+                style="margin-right: 10px"
+              >
+                <img
+                  src="../image/insta_logo.png"
+                  width="30px"
+                  height="30px"
+                  alt="인스타 버튼"
+                />
+              </a>
+              <a
+                id="kakao-login-btn"
+                href="http://pf.kakao.com/_xfyhFxj"
+                target="”_blank”"
+              >
+                <img
+                  src="../image/kakaologin.png"
+                  width="30"
+                  height="30"
+                  alt="카카오 버튼"
+                />
+              </a>
+            </div>
+            <div class="container px-4 px-lg-5" style="height: 35px" a>
+              <div class="small text-center text-muted">
+                <a href="/policy/private">개인정보처리방침</a> |
+                <a href="/policy/tos">이용약관</a>
+              </div>
+            </div>
+            <div class="container px-4 px-lg-5" style="margin-bottom: 10px">
+              <div
+                class="small text-left text-muted"
+                style="text-align: center"
+              >
+                <p>
+                  대표자: 장영재, 박민수<br />
+                  사업자번호: 148-14-01860<br />
+                  이메일: admin@coding-nara.com<br />
+                  주소: 서울특별시 서대문구 거북골로 18길 16<br />
+                  통신판매업 신고번호 : 2023-서울서대문-0418
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <br />
-    <div class="container px-4 px-lg-5">
-      <div class="small text-center text-muted">
-        Copyright &copy;코딩나라(Coding-nara)
-      </div>
-    </div>
-  </footer>
-  <!-- Bootstrap core JS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- SimpleLightbox plugin JS-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
-  <!-- Core theme JS-->
-  <script src="../js/scripts.js"></script>
-  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-  <!-- * *                               SB Forms JS                               * *-->
-  <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-  <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    </footer>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- SimpleLightbox plugin JS-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+<script src="../js/scripts.js"></script>
+<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </html>
